<resources>
    <string name="app_name">NetBot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_bluetooth">No Bluetooth adapter found</string>
    <string name="lb_paired_devices">Paired Devices</string>
    <string name="err_not_connected">Bluetooth not connected</string>
    <string name="status_enabling_bt">Enabling Bluetooth</string>
    <string name="status_bt_enalbed">Bluetooth enabled</string>
    <string name="err_no_paired">No paired devices</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="up_button">UP</string>
    <string name="left_button">LEFT</string>
    <string name="down_button">DOWN</string>
    <string name="right_button">RIGHT</string>
    <string name="err_inval_bt_device">Invalid Bluetooth device</string>
    <string name="connecting_to_device">Connecting to device:</string>
    <string name="bluetooth_connected">Bluetooth is now connected !!!</string>
    <string name="err_could_not_connect_bluetooth">ERROR: Could connect to bluetooth device!</string>
    <string name="err_no_bluetooth_socket">ERROR: Could not obtain BT socket!</string>
    <string name="err_no_communication">ERROR: Could not communicate with device!</string>
    <string name="bluetooth_communication_ready">Ready to send commands !</string>
    <string name="err_already_sending_command">Already sending a command!</string>
    <string name="title_main_select_mode">Select operation mode</string>
    <string name="text_remote_control">Remote Control</string>
    <string name="text_camera_streaming_button">Camera Streaming</string>
    <string name="text_iot_access_point_button">IOT Access Point</string>
    <string name="title_select_bt">Select BT Device</string>
    <string name="title_activity_camera_streaming">CameraStreamingActivity</string>
    <string name="start_streaming_button">Start Stream</string>
    <string name="stop_streaming_button">Stop Stream</string>
    <string name="streaming_button">Streaming</string>
    <string name="not_streaming_button">Not Streaming</string>
    <string name="text_conn_status">Connection Status</string>
    <string name="title_activity_iotaccess_point">IOTAccessPointActivity</string>
    <string name="hint_server_address">ServerAddress</string>
    <string name="button_text_refresh">Refresh</string>
</resources>
