<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_main_select_mode"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_remote_control"
        android:id="@+id/remote_control_button"
        android:onClick="startRemoteControl" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_camera_streaming_button"
        android:id="@+id/camera_streaming_button"
        android:onClick="startCameraStreaming" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_iot_access_point_button"
        android:id="@+id/iot_button"
        android:onClick="startIOTAccessPoint" />
</LinearLayout>