<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.justonesoft.netbot.NavigateActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scrollbars="vertical"
        android:id="@+id/nav_status_text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/up_button"
                android:id="@+id/up_button"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/left_button"
                android:id="@+id/left_button"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/down_button"
                android:id="@+id/down_button"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/right_button"
                android:id="@+id/right_button"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
