<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.justonesoft.netbot.CameraStreamingActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/camera_preview_frame"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></FrameLayout>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streaming_button"
        android:id="@+id/streaming_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:enabled="true"
        android:textOn="@string/streaming_button"
        android:textOff="@string/not_streaming_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_conn_status"
        android:id="@+id/conn_status"
        android:layout_toRightOf="@+id/streaming_button"
        android:layout_toEndOf="@+id/streaming_button"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/streaming_button"
        android:layout_alignParentRight="true" />
</RelativeLayout>
